# transformer

./: README.md  main.py  pyproject.toml
architecture/: attention.py  block.py  mlp.py  transformer.py
src/: embed.py  layer_norm.py  positional_embed.py  unembed.py
train/: trainer.py
train/utils/: helpers.py
utils/: helper.py  tests.py
